# diff_drive

./: frames_2026-01-08_15.00.30.gv  my_map.pgm  my_map.yaml  my_map_serial.data  temp.pgm  temp.yaml  temp_serial.data
.devcontainer/: Dockerfile  devcontainer.json
src/diff_drive_robot/: CMakeLists.txt  package.xml
src/diff_drive_robot/config/: gz_bridge.yaml  mapper_params_online_async.yaml  robot_controllers.yaml
src/diff_drive_robot/config/controller/: robot_controllers.yaml
src/diff_drive_robot/config/nav2/: nav2_params.yaml  nav2_params111.yaml
src/diff_drive_robot/config/rviz/: robot.rviz
src/diff_drive_robot/launch/: bootup_controller.launch.py  bootup_gazebo.launch.py  bringup.launch.py  localization_launch.py  navigation_launch.py  robot.launch.py  rsp.launch.py
src/diff_drive_robot/map/: new_map.pgm  new_map.yaml  new_map_serial.data
src/diff_drive_robot/urdf/: diff_drive.robot_control.xacro  diff_drive.urdf.xacro  gazebo_control.xacro  robot.gazebo.xacro  robot_core.urdf.xacro
src/diff_drive_robot/urdf/temp/: robot.gazebo  robot.urdf.xacro
src/diff_drive_robot/urdf/xacros/: colors.xacro  robot_paras.xacro
src/diff_drive_robot/worlds/: empty.world  my_world.sdf  obstacles.world  world.sdf
src/pose_registry/: CMakeLists.txt  package.xml
src/pose_registry/config/: poses.json
src/pose_registry/include/pose_registry/: pose_registry.hpp
src/pose_registry/src/: pose_registry.cpp
src/pose_registry_interfaces/: CMakeLists.txt  package.xml
src/pose_registry_interfaces/srv/: RetrievePose.srv  StorePose.srv
src/stretch_flex/: CMakeLists.txt  package.xml
