<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_registry</name>
  <version>0.0.0</version>
  <description>A ROS2 node for storing and retrieving navigation poses by name with file persistence</description>
  <maintainer email="vaghaniyash2121@gmail.com">Yash Vaghani</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nlohmann_json</build_depend>
  <exec_depend>nlohmann_json</exec_depend>
  <exec_depend>pose_registry_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>